src/thirdparty/requirejs/tests/error/doubleRequire/b.js
define(['myShim'], function (broken) {
  return { name: 'b' };
});
